welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:11: error: reassignment to val
	compteur = compteur +1 ;
                 ^